# hatrix

./: .gitignore  CMakeLists.txt  build.sh  vcpkg-configuration.json  vcpkg.json
include/hatrix/: controller.hpp  enum.hpp  gamemap.hpp  renderer.hpp  updater.hpp  world.hpp
include/hatrix/actions/: action.hpp  close.hpp  idle.hpp  move.hpp  null.hpp  open.hpp
include/hatrix/core/: the_core.hpp
include/hatrix/entities/: character.hpp  door.hpp  entity.hpp  ground.hpp  normal_entity.hpp  player.hpp  static_entity.hpp  wall.hpp
include/hatrix/ui/: editor.hpp
include/hatrix/utils/: color.hpp  fraction.hpp  pathfinder.hpp  position.hpp  predicate.hpp  shadowcasting.hpp  timer.hpp
src/: controller.cpp  gamemap.cpp  main.cpp  renderer.cpp  updater.cpp  world.cpp
src/actions/: action.cpp  close.cpp  idle.cpp  move.cpp  null.cpp  open.cpp
src/core/: the_core.cpp
src/entities/: character.cpp  door.cpp  entity.cpp  ground.cpp  player.cpp  wall.cpp
src/ui/: editor.cpp
src/utils/: pathfinder.cpp  timer.cpp
